--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -1,16 +1,6 @@
-@(message: String, style: String = "scala") 
+@(message: String, style: String = "scala")
 
-@defining(play.core.PlayVersion.current) { version =>
-
-<section id="top">
-  <div class="wrapper">
-    <h1><a href="https://playframework.com/documentation/@version/Home">@message</a></h1>
-  </div>
-</section>
-
-<div id="content" class="wrapper doc">
-<article>
-
+<div>
   <h1>@message</h1>
 
   <p>
@@ -19,8 +9,7 @@
 
   <blockquote>
     <p>
-      Made with Play @version
     </p>
   </blockquote>
+
 </div>
-}
